--- a/cereals/index.html
+++ b/cereals/index.html
@@ -17,7 +17,7 @@
     <div class="container">
       <div class="header">
         <img
-          src="https://raw.githubusercontent.com/basy-medy/proyecto_infovis/main/sello.png"
+          src="sello.png"
           alt="Logo"
           class="logo"
         />
