--- a/rain-river/index.html
+++ b/rain-river/index.html
@@ -29,13 +29,13 @@
         <span id="numeroestaciones">50</span> estaciones de medici&ograve;n
       </p>
     </div>
-    <img id="context" src="https://cdn.glitch.global/246b900a-4db3-4b00-a8f9-7d5be89d437b/context-lluvia.svg?v=1735756927008" />
-    <img id="leggend" src="https://cdn.glitch.global/246b900a-4db3-4b00-a8f9-7d5be89d437b/leggend.svg?v=1735757360665" />
+    <img id="context" src="context-lluvia.svg" />
+    <img id="leggend" src="leggend.svg" />
     <div id="myGraph"></div>
     
-   <audio id="highRain" src="https://cdn.glitch.global/246b900a-4db3-4b00-a8f9-7d5be89d437b/high.mp3" preload="auto"></audio>
-    <audio id="mediumRain" src="https://cdn.glitch.global/246b900a-4db3-4b00-a8f9-7d5be89d437b/medium.mp3" preload="auto"></audio>
-    <audio id="lowRain" src="https://cdn.glitch.global/246b900a-4db3-4b00-a8f9-7d5be89d437b/low.mp3" preload="auto"></audio>
+   <audio id="highRain" src="sounds/high.mp3" preload="auto"></audio>
+    <audio id="mediumRain" src="sounds/medium.mp3" preload="auto"></audio>
+    <audio id="lowRain" src="sounds/low.mp3" preload="auto"></audio>
  
 
   </body>
