--- a/wind-intensity/index.html
+++ b/wind-intensity/index.html
@@ -12,9 +12,9 @@
       <div id="direction"></div>
     </div>
     <div class="conte-degradado"></div>
-    <audio id="highWind" src="https://cdn.glitch.global/40e8c0db-ed3f-46a6-843f-8161001789a8/nature008.mp3" preload="auto"></audio>
-    <audio id="mediumWind" src="https://cdn.glitch.global/40e8c0db-ed3f-46a6-843f-8161001789a8/la-brisa_1.mp3" preload="auto"></audio>
-    <audio id="lowWind" src="https://cdn.glitch.global/40e8c0db-ed3f-46a6-843f-8161001789a8/vientoencampo.mp3" preload="auto"></audio>
+    <audio id="highWind" src="sounds/nature008.mp3" preload="auto"></audio>
+    <audio id="mediumWind" src="sounds/la-brisa_1.mp3" preload="auto"></audio>
+    <audio id="lowWind" src="sounds/vientoencampo.mp3" preload="auto"></audio>
   </body>
   <script src="https://cdn.plot.ly/plotly-2.34.0.min.js"></script>
   <script src="https://app.protobject.com/framework/p.js"></script>
