--- a/lessons/2-geo/index.html
+++ b/lessons/2-geo/index.html
@@ -19,7 +19,7 @@
       <span id="magnitud"></span>
       <span id="tzunami"
         ><img
-          src="https://cdn.glitch.global/ec4be6ed-9cc9-4b4b-b056-ea6bcce0e3bf/tzunami.png?v=1740928075376"
+          src="tzunami.png"
       /></span>
     </div>
     <div id="myMap"></div>
@@ -27,7 +27,7 @@
     <!-- En la clase precedente, en cambio, se usaron anotaciones (annotations) y formas (shapes) en Plotly.js -->
     <img
       id="context"
-      src="https://cdn.glitch.global/ec4be6ed-9cc9-4b4b-b056-ea6bcce0e3bf/map.svg?v=1740928070271"
+      src="map.svg"
     />
   </body>
   <script charset="UTF-8" src="efecto-terremoto.js"></script>
